# goit-pythonweb-hw-08

./: Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 6185f9a5c4de_initial_migration.py
src/: schemas.py
src/api/: birthdays.py  contacts.py  utils.py
src/database/: db.py  models.py
src/repository/: birthdays.py  contacts.py
src/services/: birthdays.py  contacts.py
