[tool.poetry]
name = "goit-pythonweb-hw-08"
version = "0.1.0"
description = "contacts_app"
authors = ["Viktor Svertoka <victor.svertoka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
psycopg2-binary = "^2.9.10"
fastapi = "^0.115.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
