[tool.poetry]
name = "goit-pythonweb-hw-08"
version = "0.1.0"
description = "contacts_app"
authors = ["Viktor Svertoka <victor.svertoka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
psycopg2-binary = "^2.9.10"
fastapi = "^0.115.6"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
pydantic = "^2.10.3"
pydantic-extra-types = "^2.10.1"
phonenumbers = "^8.13.52"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
